tests/errors/generic-enum-constructor-mismatch.ari
fn main() -> i64 {
  let value: Option[i64] = Some<bool>(true);
  return 0;
}
